samples/_failures_safe/1761071537_93fd4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_221d930a.c: In function ‘main’:
./samples/SAFE/__tmp_221d930a.c:154:16: error: expected expression at end of input
  154 |                token.line, token.column,
      |                ^~~~~
./samples/SAFE/__tmp_221d930a.c:154:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_221d930a.c:154:16: error: expected declaration or statement at end of input
